--- a/project-base/assets/styles/frontend/common/layout/footer.less
+++ b/project-base/assets/styles/frontend/common/layout/footer.less
@@ -65,7 +65,7 @@
     .form-error {
         position: absolute;
         top: 50%;
-        margin-top: -10px;
+        transform: translateY(-50%);
         right: 10px;
 
         &--choice {
