--- a/project-base/assets/styles/frontend/common/layout/header.less
+++ b/project-base/assets/styles/frontend/common/layout/header.less
@@ -106,17 +106,16 @@
 
         .svg {
             margin-right: 5px;
-            vertical-align: baseline;
-            position: relative;
-            top: -2px;
             
             font-size: 11px;
         }
     }
 
     &__in {
+        display: flex;
+        height: 100%;
         padding: 0 10px;
-        display: block;
+        align-items: center;
         position: relative;
         transition: @transition color;
 
