--- a/project-base/assets/styles/frontend/common/svg-custom.less
+++ b/project-base/assets/styles/frontend/common/svg-custom.less
@@ -3,7 +3,3 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
-.svg:before {
-    vertical-align: middle;
-}
